script that explores the first script

--- a/Playground/POMResponse/SingleBatch.ipynb
+++ b/Playground/POMResponse/SingleBatch.ipynb
@@ -2,16 +2,570 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f62f5526",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# import sys, os\n",
+    "# \n",
+    "# # go two levels up:  .../Graphnet-Applications\n",
+    "# repo_root = os.path.abspath(\"../..\")\n",
+    "# sys.path.append(repo_root)\n",
+    "# from Helpers.tabulators import FrameKeyToTable\n",
+    "# "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6150bb72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from icecube import dataio, icetray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef583e1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "337503f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from icecube import LeptonInjector # for EventProperties\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a841cda8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA_PATH = \"/project/def-nahee/kbas/POM_Response/pom_response_batch_000.i3.gz\"\n",
+    "GCD_PATH = \"/project/6008051/pone_simulation/GCD_Library/PONE_800mGrid.i3.gz\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d139de7",
+   "metadata": {},
+   "source": [
+    "## here, frame corresponds to one event. All Keys in the `Frame` are:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b6912d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_file = dataio.I3File(DATA_PATH)\n",
+    "data_file.pop_frame()\n",
+    "frame = data_file.pop_frame()\n",
+    "print(frame)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb5b528f",
+   "metadata": {},
+   "source": [
+    "# Let's not look at all these keys individually in 3 sections:\n",
+    "- ## 1: Event Based Keys\n",
+    "    - EventProperties\n",
+    "    - I3EventHeader\n",
+    "- ## 2: EventPulseSeries, PMT_Response, PMT_Response_nonoise\n",
+    "- ## 3: I3MCTree and I3MCTree_postprop, MMCTrackList, \n",
+    "- ## 4: Noises\n",
+    "    - Noise_K40\n",
+    "    - Noise_Dark\n",
+    "- ## 5: Not Useful Metadata\n",
+    "    - I3MCTree_RNGState (check its meaning)\n",
+    "\n",
+    "TriggerTime_3PMT_1DOM?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "888cd4c1",
+   "metadata": {},
+   "source": [
+    "# 1.1: EventProperties"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5a31a36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ep_table = FrameKeyToTable(\n",
+    "    data_path=DATA_PATH,\n",
+    "    frame_key=\"EventProperties\",\n",
+    ")\n",
+    "df_ep = ep_table.to_dataframe(max_events=300)\n",
+    "df_ep"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "899439dd",
+   "metadata": {},
+   "source": [
+    "### FinalStateY \n",
+    "\n",
+    "`FinalStateY` is the **inelasticity** (often called Bjorken-y) of the neutrino interaction: It tells you **what fraction of the neutrino energy goes into the hadronic system**.\n",
+    "#### Plugging in the numbers for the first event  (buraya baska notlar da eklemelisin)\n",
+    "\n",
+    "- `TotalEnergy = NuMu energy`  = 119.301 GeV\n",
+    "- `Energy of Hadrons`= 22.0522 GeV\n",
+    "- `FinalStateY`:  22.0522 GeV/119.301 GeV = 0.184845 \n",
+    "\n",
+    "So, in the first event:\n",
+    "\n",
+    "> about **18.5%** of the neutrino energy went into the **hadronic cascade**,  \n",
+    "> and about **81.5%** went into the **muon track**.\n",
+    "\n",
+    "\n",
+    "### FinalStateX (I did not check this myself)\n",
+    "\n",
+    "`FinalStateX (Bjorken-x)`:\n",
+    "\n",
+    "$$\n",
+    "x = \\frac{Q^2}{2\\,m_N\\,(E_\\nu - E_\\mu)}\n",
+    "$$\n",
+    "\n",
+    "and using inelasticity, \n",
+    "\n",
+    "$$\n",
+    "x = \\frac{Q^2}{2\\,m_N\\,E_\\nu\\,y}\n",
+    "$$\n",
+    "\n",
+    "Where:\n",
+    "\n",
+    "- $x$: Bjorken-x (FinalStateX)\n",
+    "- $Q^2$: squared four-momentum transfer ($Q^2 = -q^2$)\n",
+    "- $m_N$: nucleon mass (proton or neutron)\n",
+    "- $E_\\nu$: incoming neutrino energy\n",
+    "- $E_\\mu$: outgoing muon energy\n",
+    "- $y$: inelasticity (FinalStateY), approximately $y \\approx (E_\\nu - E_\\mu)/E_\\nu$\n",
+    "\n",
+    "### TotalColumnDepth \n",
+    "### Radius \n",
+    "### ImpactParameter \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54448873",
+   "metadata": {},
+   "source": [
+    "# 1.2: I3EventHeader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5582f4ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i3eh_table = FrameKeyToTable(\n",
+    "    data_path=DATA_PATH,\n",
+    "    frame_key=\"I3EventHeader\",\n",
+    ")\n",
+    "df_i3eh = i3eh_table.to_dataframe(max_events=300)\n",
+    "df_i3eh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9b2f166",
+   "metadata": {},
+   "source": [
+    "###### some observations etc related to the table here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbce4942",
+   "metadata": {},
+   "source": [
+    "# 2.1: EventPulseSeries\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e304360",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eps_table = FrameKeyToTable(\n",
+    "    data_path=DATA_PATH,\n",
+    "    frame_key=\"EventPulseSeries\",     # I3Map<OMKey, vector<I3RecoPulse>>\n",
+    ")\n",
+    "\n",
+    "df_eps = eps_table.to_dataframe(max_events=300)\n",
+    "df_eps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "308b0058",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data_file = dataio.I3File(DATA_PATH)\n",
+    "# data_file.pop_frame()\n",
+    "# frame = data_file.pop_frame()\n",
+    "# print(frame[\"EventPulseSeries\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf4979f4",
+   "metadata": {},
+   "source": [
+    "# 2.2: PMT_Response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71ff7218",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pmtr_table = FrameKeyToTable(\n",
+    "    data_path=DATA_PATH,\n",
+    "    frame_key=\"PMT_Response\",     # I3Map<OMKey, vector<I3RecoPulse>>\n",
+    ")\n",
+    "\n",
+    "df_pmtr = pmtr_table.to_dataframe(max_events=300)\n",
+    "df_pmtr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38d44635",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data_file = dataio.I3File(DATA_PATH)\n",
+    "# data_file.pop_frame()\n",
+    "# frame = data_file.pop_frame()\n",
+    "# print(frame[\"PMT_Response\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58c660f8",
+   "metadata": {},
+   "source": [
+    "# 2.3: PMT_Response_nonoise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79f8f120",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pmtrnn_table = FrameKeyToTable(\n",
+    "    data_path=DATA_PATH,\n",
+    "    frame_key=\"PMT_Response_nonoise\",     # I3Map<OMKey, vector<I3RecoPulse>>\n",
+    ")\n",
+    "\n",
+    "df_pmtrnn = pmtrnn_table.to_dataframe(max_events=300)\n",
+    "df_pmtrnn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f90380a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data_file = dataio.I3File(DATA_PATH)\n",
+    "# data_file.pop_frame()\n",
+    "# frame = data_file.pop_frame()\n",
+    "# print(frame[\"PMT_Response_nonoise\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "549d12ae",
+   "metadata": {},
+   "source": [
+    "# 3.1: I3MCTree "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33274aef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_file = dataio.I3File(DATA_PATH)\n",
+    "data_file.pop_frame()\n",
+    "frame = data_file.pop_frame()\n",
+    "print(frame[\"I3MCTree\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "506153b4",
+   "metadata": {},
+   "source": [
+    "# 3.2: I3MCTree_postprop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60d470a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_file = dataio.I3File(DATA_PATH)\n",
+    "data_file.pop_frame()\n",
+    "frame = data_file.pop_frame()\n",
+    "print(frame['I3MCTree_postprop'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d809469",
+   "metadata": {},
+   "source": [
+    "# 3.3: MMCTrackList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffd0e4a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_file = dataio.I3File(DATA_PATH)\n",
+    "data_file.pop_frame()\n",
+    "frame = data_file.pop_frame()\n",
+    "print(frame['MMCTrackList'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "241b6dfa",
+   "metadata": {},
+   "source": [
+    "# 4.1: Noise_K40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bea5dbb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nk40_table = FrameKeyToTable(\n",
+    "    data_path=DATA_PATH,\n",
+    "    frame_key=\"Noise_K40\",     # I3Map<OMKey, vector<I3RecoPulse>>\n",
+    ")\n",
+    "\n",
+    "df_nk40 = nk40_table.to_dataframe(max_events=300)\n",
+    "df_nk40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45f63235",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data_file = dataio.I3File(DATA_PATH)\n",
+    "# data_file.pop_frame()\n",
+    "# frame = data_file.pop_frame()\n",
+    "# print(frame[\"Noise_K40\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e860bd8d",
+   "metadata": {},
+   "source": [
+    "# 4.2: Noise_Dark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68e69117",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nd_table = FrameKeyToTable(\n",
+    "    data_path=DATA_PATH,\n",
+    "    frame_key=\"Noise_Dark\",\n",
+    ")\n",
+    "df_nd = nd_table.to_dataframe(max_events=300)\n",
+    "df_nd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b61aac5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data_file = dataio.I3File(DATA_PATH)\n",
+    "# data_file.pop_frame()\n",
+    "# frame = data_file.pop_frame()\n",
+    "# print(frame[\"Noise_Dark\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1527db25",
+   "metadata": {},
+   "source": [
+    "# 5.1: I3MCTree_RNGState"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af8f7621",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_file = dataio.I3File(DATA_PATH)\n",
+    "data_file.pop_frame()\n",
+    "frame = data_file.pop_frame()\n",
+    "frame['I3MCTree_RNGState']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95046c6b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6936678",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8568304",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# hof"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fe7ab2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_file = dataio.I3File(DATA_PATH)\n",
+    "data_file.pop_frame()\n",
+    "frame = data_file.pop_frame()\n",
+    "print(frame['TriggerTime_3PMT_1DOM'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2207e0a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame['TriggerTime_3PMT_1DOM'].value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b124933",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62105f8d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe7686fd",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81de5346",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3595025",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
