--- a/Playground/POMResponse/SingleBatch.ipynb
+++ b/Playground/POMResponse/SingleBatch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f62f5526",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "6150bb72",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ef583e1d",
    "metadata": {},
    "outputs": [],
@@ -37,17 +37,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "337503f3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from icecube import LeptonInjector # for EventProperties\n"
+    "from icecube import LeptonInjector # for EventProperties\n",
+    "from icecube import simclasses # for MMCTrackList\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "a841cda8",
    "metadata": {},
    "outputs": [],
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "2b6912d5",
    "metadata": {},
    "outputs": [
@@ -129,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d5a31a36",
    "metadata": {},
    "outputs": [
@@ -1323,7 +1325,7 @@
        "56    3093.815193  1916.806363  2824.211293  -456.302524  1.737064  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "5582f4ac",
    "metadata": {},
    "outputs": [
@@ -2533,7 +2535,7 @@
        "56                   4294967295  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2565,7 +2567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "5e304360",
    "metadata": {},
    "outputs": [
@@ -3701,7 +3703,7 @@
        "56           True             True          4530  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3718,7 +3720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "308b0058",
    "metadata": {},
    "outputs": [],
@@ -3739,7 +3741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "71ff7218",
    "metadata": {},
    "outputs": [
@@ -4875,7 +4877,7 @@
        "56          False             True          6894  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4892,7 +4894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "38d44635",
    "metadata": {},
    "outputs": [],
@@ -4913,7 +4915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "79f8f120",
    "metadata": {},
    "outputs": [
@@ -6049,7 +6051,7 @@
        "56          False             True           111  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6066,7 +6068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "f90380a2",
    "metadata": {},
    "outputs": [],
@@ -6087,7 +6089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "33274aef",
    "metadata": {},
    "outputs": [
@@ -6120,7 +6122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "60d470a8",
    "metadata": {},
    "outputs": [
@@ -6172,7 +6174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "ffd0e4a0",
    "metadata": {},
    "outputs": [
@@ -6180,7 +6182,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<icecube._icetray.I3FrameObject object at 0x150971115460>\n"
+      "[I3MMCTrack = [\n",
+      " (xi, yi, zi, ti, Ei) = (46.7688 ,344.607 ,276.395 ,0 ,97.2484)\n",
+      " (xc, yc, zc, tc, Ec) = (27.8353 ,227.424 ,353.196 ,471.598 ,59.4044)\n",
+      " (xf, yf, zf, tf, Ef) = (-2.50006 ,31.682 ,481.839 ,1261.47 ,-38942.5)\n",
+      " Elost = 97.1428\n",
+      " Particle = [ I3Particle MajorID : 3019218780441209185\n",
+      "             MinorID : 7\n",
+      "              Zenith : 2.14592\n",
+      "             Azimuth : 1.41004\n",
+      "                   X : 46.7688\n",
+      "                   Y : 344.607\n",
+      "                   Z : 276.395\n",
+      "                Time : 0\n",
+      "              Energy : 97.2484\n",
+      "               Speed : 0.299792\n",
+      "              Length : 377.572\n",
+      "                Type : MuMinus\n",
+      "        PDG encoding : 13\n",
+      "               Shape : MCTrack\n",
+      "              Status : NotSet\n",
+      "            Location : InIce\n",
+      "]]\n",
+      "]\n"
      ]
     }
    ],
@@ -6201,7 +6225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "bea5dbb3",
    "metadata": {},
    "outputs": [
@@ -7337,7 +7361,7 @@
        "56          False             True          4910  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7354,7 +7378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "45f63235",
    "metadata": {},
    "outputs": [],
@@ -7375,7 +7399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "68e69117",
    "metadata": {},
    "outputs": [
@@ -8511,7 +8535,7 @@
        "56          False             True          1636  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8527,7 +8551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "5b61aac5",
    "metadata": {},
    "outputs": [],
@@ -8548,53 +8572,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "af8f7621",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<icecube._icetray.I3FrameObject at 0x1509711154d0>"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'icecube._icetray.I3FrameObject'>\n"
+     ]
     }
    ],
    "source": [
     "data_file = dataio.I3File(DATA_PATH)\n",
     "data_file.pop_frame()\n",
     "frame = data_file.pop_frame()\n",
-    "frame['I3MCTree_RNGState']"
+    "print(type(frame[\"I3MCTree_RNGState\"]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "95046c6b",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6936678",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__instance_size__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__']\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj = frame[\"I3MCTree_RNGState\"]\n",
+    "print(dir(obj))\n",
+    "## do this for all other keys :D"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c8568304",
+   "id": "c6936678",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hof"
+    "## looks unnecessary but still check the source code and learn the meaning"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8568304",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54e9795a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49121347",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f65cd29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -8636,6 +8693,43 @@
    ],
    "source": [
     "frame['TriggerTime_3PMT_1DOM'].value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "8495b507",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character '‚' (U+201A) (3367555830.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[27], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(dir(frame['TriggerTime_3PMT_1DOM']))‚\u001b[0m\n\u001b[0m                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character '‚' (U+201A)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dir(frame['TriggerTime_3PMT_1DOM']))‚"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c882cfed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54dfd08f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## are all the keys investigated??"
    ]
   }
  ],
