--- a/Playground/POMResponse/SingleBatch.ipynb
+++ b/Playground/POMResponse/SingleBatch.ipynb
@@ -8632,7 +8632,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54e9795a",
+   "id": "c5f47547",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8640,7 +8640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49121347",
+   "id": "71f20eeb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8648,7 +8648,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f65cd29",
+   "id": "937cde87",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -8698,34 +8698,33 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8495b507",
+   "id": "0c68eddf",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid character '‚' (U+201A) (3367555830.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[27], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(dir(frame['TriggerTime_3PMT_1DOM']))‚\u001b[0m\n\u001b[0m                                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid character '‚' (U+201A)\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['__bool__', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getstate__', '__getstate_manages_dict__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__instance_size__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__nonzero__', '__reduce__', '__reduce_ex__', '__repr__', '__safe_for_unpickling__', '__setattr__', '__setstate__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'value']\n"
      ]
     }
    ],
    "source": [
-    "print(dir(frame['TriggerTime_3PMT_1DOM']))‚"
+    "print(dir(frame['TriggerTime_3PMT_1DOM']))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c882cfed",
+   "id": "a5816e16",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "54dfd08f",
+   "execution_count": 28,
+   "id": "9f6a09dc",
    "metadata": {},
    "outputs": [],
    "source": [
