--- a/Playground/GCD/FindRelevantGCD.ipynb
+++ b/Playground/GCD/FindRelevantGCD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "45c70ead",
+   "id": "67e2d112",
    "metadata": {},
    "source": [
     "On the cluster, there are two GCD files that I suspect might correspond to the data under the directory `\"/project/6008051/pone_simulation/MC10-000002-nu_mu-2_7-LeptonInjector-PROPOSAL-clsim/Photon\"`\n",
@@ -20,21 +20,31 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c5c69975",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d230d1b",
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "graphnet_env",
    "language": "python",
-   "name": "python3"
+   "name": "graphnet_env"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.6"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
