--- a/Playground/GCD/FindRelevantGCD.ipynb
+++ b/Playground/GCD/FindRelevantGCD.ipynb
@@ -22,10 +22,67 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d230d1b",
+   "id": "871adaac",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33d7119d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08b76936",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73ff2e3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from icecube import dataio, icetray , dataclasses \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f03ef9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GCD_PATH = \"/project/6008051/pone_simulation/GCD_Library/PONE_800mGrid.i3.gz\"\n",
+    "data_file = dataio.I3File(GCD_PATH)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d230d1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "while data_file.more():\n",
+    "    frame = data_file.pop_frame()\n",
+    "    print(\"-\" * 60)\n",
+    "    print(f\"Frame index: {i}\")\n",
+    "    print(f\"Stop type : {frame.Stop}\")   # Geometry / Calibration / DetectorStatus vs.\n",
+    "    print(\"Keys      :\")\n",
+    "    for k in frame.keys():\n",
+    "        print(\"   \", k)\n",
+    "\n",
+    "    i += 1\n"
+   ]
   }
  ],
  "metadata": {
