--- a/Playground/GCD/DetectorStatus.ipynb
+++ b/Playground/GCD/DetectorStatus.ipynb
@@ -91,7 +91,7 @@
    "id": "447c4aae",
    "metadata": {},
    "source": [
-    "# 3.1 DetectorStatus.I3Calibration\n",
+    "# - DetectorStatus.I3Calibration\n",
     "###### This may be included in G or C frame. Check it"
    ]
   },
@@ -100,7 +100,7 @@
    "id": "dc8e4d0f",
    "metadata": {},
    "source": [
-    "# 3.2 DetectorStatus.StartTime and DetectorStatus.EndTime\n",
+    "# - DetectorStatus.StartTime and DetectorStatus.EndTime\n",
     "###### This may be included in G or C frame. Check it"
    ]
   },
@@ -109,7 +109,7 @@
    "id": "fcc57ae0",
    "metadata": {},
    "source": [
-    "# 3.3 DetectorStatus.I3DetectorStatus"
+    "# - DetectorStatus.I3DetectorStatus"
    ]
   },
   {
@@ -172,7 +172,7 @@
    "id": "e740fe84",
    "metadata": {},
    "source": [
-    "# 3.3.1 dom_status"
+    "## -- dom_status"
    ]
   },
   {
@@ -471,7 +471,7 @@
    "id": "e92a88c7",
    "metadata": {},
    "source": [
-    "# 3.4 DetectorStatus.I3Geometry\n",
+    "# - DetectorStatus.I3Geometry\n",
     "###### This may be included in G or C frame. Check it"
    ]
   },
@@ -480,7 +480,7 @@
    "id": "23bee7ec",
    "metadata": {},
    "source": [
-    "# 3.5 DetectorStatus.SPEAbove\n",
+    "# - DetectorStatus.SPEAbove\n",
     "###### This may be included in G or C frame. Check it"
    ]
   },
@@ -489,7 +489,7 @@
    "id": "9e6cb01b",
    "metadata": {},
    "source": [
-    "# 3.6 DetectorStatus.SPEScalingFactors\n",
+    "# - DetectorStatus.SPEScalingFactors\n",
     "###### This may be included in G or C frame. Check it"
    ]
   },
@@ -498,7 +498,7 @@
    "id": "7f956280",
    "metadata": {},
    "source": [
-    "# 3.7 DetectorStatus.I3ModuleGeoMap\n",
+    "# - DetectorStatus.I3ModuleGeoMap\n",
     "###### This may be included in G or C frame. Check it"
    ]
   },
@@ -507,7 +507,7 @@
    "id": "d094612e",
    "metadata": {},
    "source": [
-    "# 3.8 DetectorStatus.I3OMGeoMap\n",
+    "# - DetectorStatus.I3OMGeoMap\n",
     "###### This may be included in G or C frame. Check it"
    ]
   },
@@ -516,7 +516,7 @@
    "id": "c13bae79",
    "metadata": {},
    "source": [
-    "# 3.9 DetectorStatus.Subdetectors\n",
+    "# - DetectorStatus.Subdetectors\n",
     "###### This may be included in G or C frame. Check it"
    ]
   },
@@ -525,7 +525,7 @@
    "id": "12976cc5",
    "metadata": {},
    "source": [
-    "# 3.10 DetectorStatus.BadDomsList"
+    "# - DetectorStatus.BadDomsList"
    ]
   },
   {
@@ -566,7 +566,7 @@
    "id": "83d027ad",
    "metadata": {},
    "source": [
-    "# 3.11 DetectorStatus.BadDomsListSLC"
+    "# - DetectorStatus.BadDomsListSLC"
    ]
   },
   {
