--- a/Playground/GCD/Geometry.ipynb
+++ b/Playground/GCD/Geometry.ipynb
@@ -40,7 +40,8 @@
    "source": [
     "GCD_PATH = \"/project/6008051/pone_simulation/GCD_Library/PONE_800mGrid.i3.gz\"\n",
     "data_file = dataio.I3File(GCD_PATH)\n",
-    "geometry = data_file.pop_frame()"
+    "geometry = data_file.pop_frame()\n",
+    "calibration = data_file.pop_frame()"
    ]
   },
   {
