--- a/Playground/MyClasses/feature_extractor.ipynb
+++ b/Playground/MyClasses/feature_extractor.ipynb
@@ -2,10 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "d415866c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2025-12-22 12:29:37 - <module> - `km3net` not available. Some functionality may be missing.\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kbas/.local/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2025-12-22 12:29:42 - <module> - `jammy_flows` not available. Normalizing Flow functionality is missing.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "import sys, os\n",
     "\n",
@@ -18,22 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "31ff8d9f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# if necessary:\n",
-    "# from graphnet.data.extractors.icecube import (\n",
-    "#     I3FeatureExtractorIceCube86,\n",
-    "#     I3FeatureExtractor,\n",
-    "#     I3Extractor\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "id": "95e88989",
    "metadata": {},
    "outputs": [],
@@ -43,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "6e868dc9",
    "metadata": {},
    "outputs": [],
@@ -54,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "c12b0eab",
    "metadata": {},
    "outputs": [],
@@ -64,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "5a920e3b",
    "metadata": {},
    "outputs": [
@@ -72,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[32mINFO    \u001b[0m 2025-12-18 14:41:10 - I3FeatureExtractorPONE.__init__ - Writing log to \u001b[1mlogs/graphnet_20251218-144110.log\u001b[0m\n"
+      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[32mINFO    \u001b[0m 2025-12-22 12:29:43 - I3FeatureExtractorPONE.__init__ - Writing log to \u001b[1mlogs/graphnet_20251222-122943.log\u001b[0m\n"
      ]
     }
    ],
@@ -82,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "86577073",
    "metadata": {},
    "outputs": [
@@ -92,7 +100,7 @@
        "'feature'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "aebbef81",
    "metadata": {},
    "outputs": [
@@ -113,7 +121,7 @@
        "'EventPulseSeries'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "410c1b41",
    "metadata": {},
    "outputs": [
@@ -134,7 +142,7 @@
        "[None]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "1602e2e7",
    "metadata": {},
    "outputs": [
@@ -155,7 +163,7 @@
        "''"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "44c665f1",
    "metadata": {},
    "outputs": [
@@ -176,7 +184,7 @@
        "False"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "060f1ef7",
    "metadata": {},
    "outputs": [
@@ -197,7 +205,7 @@
        "'feature'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "1b7dd2ce",
    "metadata": {},
    "outputs": [
@@ -218,7 +226,7 @@
        "''"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "7c7f3e59",
    "metadata": {},
    "outputs": [
@@ -239,7 +247,7 @@
        "{}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "286faec8",
    "metadata": {},
    "outputs": [],
@@ -260,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "e7313e0d",
    "metadata": {},
    "outputs": [],
@@ -270,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "1a0be0a1",
    "metadata": {},
    "outputs": [],
@@ -280,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "fdd85fd7",
    "metadata": {},
    "outputs": [
@@ -290,7 +298,7 @@
        "'/project/def-nahee/kbas/POM_Response/pom_response_batch_000.i3.gz'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "9dc26c07",
    "metadata": {},
    "outputs": [
@@ -311,7 +319,7 @@
        "'/project/6008051/pone_simulation/GCD_Library/PONE_800mGrid.i3.gz'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,17 +330,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "43339944",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<icecube._dataclasses.I3OMGeoMap at 0x14ccf13f1070>"
+       "<icecube._dataclasses.I3OMGeoMap at 0x14a35ab31a80>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,17 +351,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "93198814",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<icecube._dataclasses.I3Calibration at 0x14ccf13f10e0>"
+       "<icecube._dataclasses.I3Calibration at 0x14a35ab31af0>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,17 +372,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "e1e15c22",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<icecube._icetray.I3Frame at 0x14ccf13f0890>"
+       "<icecube._icetray.I3Frame at 0x14a35ab319a0>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "a4ebe97a",
    "metadata": {},
    "outputs": [],
@@ -397,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "id": "7e092bb1",
    "metadata": {},
    "outputs": [
@@ -734,7 +742,7 @@
        "[4472 rows x 19 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
