--- a/Playground/MyClasses/truth_extractor.ipynb
+++ b/Playground/MyClasses/truth_extractor.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2025-12-22 12:28:09 - <module> - `km3net` not available. Some functionality may be missing.\u001b[0m\n"
+      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2025-12-22 12:44:47 - <module> - `km3net` not available. Some functionality may be missing.\u001b[0m\n"
      ]
     },
     {
@@ -25,7 +25,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2025-12-22 12:28:14 - <module> - `jammy_flows` not available. Normalizing Flow functionality is missing.\u001b[0m\n"
+      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2025-12-22 12:44:52 - <module> - `jammy_flows` not available. Normalizing Flow functionality is missing.\u001b[0m\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[32mINFO    \u001b[0m 2025-12-22 12:28:14 - I3TruthExtractorPONE.__init__ - Writing log to \u001b[1mlogs/graphnet_20251222-122814.log\u001b[0m\n"
+      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[32mINFO    \u001b[0m 2025-12-22 12:44:52 - I3TruthExtractorPONE.__init__ - Writing log to \u001b[1mlogs/graphnet_20251222-124452.log\u001b[0m\n"
      ]
     }
    ],
@@ -480,7 +480,7 @@
     {
      "data": {
       "text/plain": [
-       "<icecube._dataclasses.I3OMGeoMap at 0x14b89075ee30>"
+       "<icecube._dataclasses.I3OMGeoMap at 0x14e754d57a70>"
       ]
      },
      "execution_count": 22,
@@ -501,7 +501,7 @@
     {
      "data": {
       "text/plain": [
-       "<icecube._dataclasses.I3Calibration at 0x14b89075edc0>"
+       "<icecube._dataclasses.I3Calibration at 0x14e754d57990>"
       ]
      },
      "execution_count": 23,
@@ -522,7 +522,7 @@
     {
      "data": {
       "text/plain": [
-       "<scipy.spatial._qhull.ConvexHull at 0x14b891cee930>"
+       "<scipy.spatial._qhull.ConvexHull at 0x14e755940b30>"
       ]
      },
      "execution_count": 24,
@@ -544,7 +544,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<scipy.spatial._qhull.ConvexHull object at 0x14b891cee930>\n"
+      "<scipy.spatial._qhull.ConvexHull object at 0x14e755940b30>\n"
      ]
     }
    ],
@@ -561,7 +561,7 @@
     {
      "data": {
       "text/plain": [
-       "<scipy.spatial._qhull.Delaunay at 0x14b89419c350>"
+       "<scipy.spatial._qhull.Delaunay at 0x14e75584e9c0>"
       ]
      },
      "execution_count": 26,
@@ -583,7 +583,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<scipy.spatial._qhull.Delaunay object at 0x14b89419c350>\n"
+      "<scipy.spatial._qhull.Delaunay object at 0x14e75584e9c0>\n"
      ]
     }
    ],
@@ -704,7 +704,7 @@
     {
      "data": {
       "text/plain": [
-       "(<icecube._dataclasses.I3Particle at 0x14b89086eb20>, 1, 0.815154748398404)"
+       "(<icecube._dataclasses.I3Particle at 0x14e754e67a70>, 1, 0.815154748398404)"
       ]
      },
      "execution_count": 32,
@@ -779,6 +779,84 @@
    "outputs": [],
    "source": [
     "## edit your PONE Truth Extractor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "04ff78a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_truth_extractor_with_exclude = I3TruthExtractorPONE(mctree = 'I3MCTree_postprop', \n",
+    "                                                       exclude=['L7_oscNext_bool', 'L6_oscNext_bool',\n",
+    "                                                               'L5_oscNext_bool', 'L4_oscNext_bool',\n",
+    "                                                               'L3_oscNext_bool',\n",
+    "                                                               'OnlineL2Filter_17','MuonFilter_13',\n",
+    "                                                               'CascadeFilter_13','DeepCoreFilter_13'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "6090a8a3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_truth_extractor_with_exclude.set_gcd(i3_file=DATA_PATH, gcd_file=GCD_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "1d4dcdc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_file = dataio.I3File(DATA_PATH)\n",
+    "frame = data_file.pop_physics()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "191d972b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'energy': 119.30066500027469,\n",
+       " 'position_x': 46.768786680196,\n",
+       " 'position_y': 344.60676053887323,\n",
+       " 'position_z': 276.39457112073273,\n",
+       " 'azimuth': 1.378986580623348,\n",
+       " 'zenith': 2.1294179528330694,\n",
+       " 'pid': 14,\n",
+       " 'event_time': 0,\n",
+       " 'sim_type': 'LeptonInjector',\n",
+       " 'interaction_type': 1,\n",
+       " 'elasticity': 0.815154748398404,\n",
+       " 'RunID': 0,\n",
+       " 'SubrunID': 4294967295,\n",
+       " 'EventID': 1,\n",
+       " 'SubEventID': 0,\n",
+       " 'dbang_decay_length': -1,\n",
+       " 'track_length': -1,\n",
+       " 'stopped_muon': -1,\n",
+       " 'energy_track': 97.35410453129462,\n",
+       " 'energy_cascade': 21.946560468980067,\n",
+       " 'inelasticity': 0.18396008495786287,\n",
+       " 'is_starting': True}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_truth_extractor_with_exclude(frame)"
    ]
   }
  ],
